[tool.poetry]
name = "gis-polygon"
version = "0.1.0"
description = ""
authors = ["p.o.kuznetsov <p.o.kuznetsov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-sqlalchemy = "^2.3"
geoalchemy2 = "^0.5.0"
flask-restful = "^0.3.7"
python-dotenv = "^0.10.1"
flask-migrate = "^2.3"
psycopg2 = "^2.7"
shapely = "^1.6"
pyproj = "^1.9"
geojson = "^2.4"
marshmallow = "=2.16.1"
psycopg2-binary = "^2.7"
pytest = "^4.1"
pytest-dotenv = "^0.3.1"
flask-marshmallow = "^0.9.0"
marshmallow-sqlalchemy = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
